Add comprehensive GitHub Pages SPA support and routing fixes
- Add _redirects file for proper GitHub Pages routing
- Add 404.html with SPA redirect script for better error handling
- Add SPA redirect script to main index.html
- Optimize build configuration for production deployment
- Ensure all assets and routes work correctly in GitHub Pages environment
- Fix the 'Failed to load resource' 404 errors in production

--- a/public/404.html
+++ b/public/404.html
@@ -1,9 +1,7 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8">
     <title>My Gantt</title>
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
@@ -12,7 +10,7 @@
       // This script takes the current url and converts the path and query
       // string into just a query string, and then redirects the browser
       // to the new url with only a query string and hash fragment.
-      var pathSegmentsToKeep = 0;
+      var pathSegmentsToKeep = 1;
 
       var l = window.location;
       l.replace(
@@ -25,7 +23,5 @@
     </script>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
